--- a/.gitmodules
+++ b/.gitmodules
@@ -125,3 +125,6 @@
 [submodule "files/.vim/bundle/vim-coffee-script"]
 	path = files/.vim/bundle/vim-coffee-script
 	url = https://github.com/kchmck/vim-coffee-script.git
+[submodule "files/.zprezto"]
+	path = files/.zprezto
+	url = https://github.com/sorin-ionescu/prezto.git
