--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -35,3 +35,6 @@ bind '"' split-window -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
 
 set-option -g default-command ""
+
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
