Add dotbot to install this dotfiles

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,6 @@ files/.vim/bin/phpctags
 files/.vim/bundle/.cache
 files/.vim/bundle/cache_nvim
 files/.vim/bundle/state_nvim.vim
+files/.vim/bundle/cache_vim
+files/.vim/bundle/state_vim.vim
 files/.vim/bundle/repos
