Modify vim colorscheme

--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -38,3 +38,5 @@ set-option -g default-command ""
 
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
+
+set-option -g status-bg "colour23"
