--- a/files/.vim/bundle/rc/dein.toml
+++ b/files/.vim/bundle/rc/dein.toml
@@ -2,11 +2,11 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
 [[plugins]]
+repo = 'Shougo/denite.nvim'
+[[plugins]]
 repo = 'Shougo/neosnippet.vim'
 [[plugins]]
 repo = 'Shougo/neosnippet-snippets'
-[[plugins]]
-repo = 'Shougo/denite.nvim'
 [[plugins]]
 repo = 'Shougo/neoyank.vim'
 [[plugins]]
@@ -33,6 +33,12 @@ repo = 'AndrewRadev/splitjoin.vim'
 repo = 'tpope/vim-surround'
 [[plugins]]
 repo = 'vim-scripts/AnsiEsc.vim'
+
+# themes
+[[plugins]]
+repo = 'jacoborus/tender.vim'
+[[plugins]]
+repo = 'hauleth/blame.vim'
 
 [[plugins]]
 repo = 'neomake/neomake'                  
@@ -69,17 +75,16 @@ hook_add = '''
 nnoremap [denite] <Nop>
 nmap <Space>f [denite]
 
-nmap <silent> [denite]f :<C-u>Denite file<CR>
-nmap <silent> [denite]t :<C-u>Denite filetype<CR>
-nmap <silent> [denite]r :<C-u>Denite file_rec<CR>
-nmap <silent> [denite]m :<C-u>Denite file_mru<CR>
-nmap <silent> [denite]l :<C-u>Denite line<CR>
-nmap <silent> [denite]y :<C-u>Denite neoyank<CR>
-nmap <silent> [denite]b :<C-u>Denite buffer<CR>
-nmap <silent> [denite]o :<C-u>Denite outline<CR>
-nmap <silent> [denite]g :<C-u>Denite grep<CR>
-" ctrlp
-nnoremap <silent> <C-p> :<C-u>Denite file_rec<CR>
+nmap <silent> [denite]w :<C-u>Denite file -highlight-mode-insert=Search<CR>
+nmap <silent> [denite]t :<C-u>Denite filetype -highlight-mode-insert=Search<CR>
+nmap <silent> [denite]f :<C-u>Denite file_rec -highlight-mode-insert=Search<CR>
+nmap <silent> [denite]m :<C-u>Denite file_mru -highlight-mode-insert=Search<CR>
+nmap <silent> [denite]l :<C-u>Denite line -highlight-mode-insert=Search<CR>
+nmap <silent> [denite]y :<C-u>Denite neoyank -highlight-mode-insert=Search<CR>
+nmap <silent> [denite]b :<C-u>Denite buffer -highlight-mode-insert=Search<CR>
+nmap <silent> [denite]o :<C-u>Denite outline -highlight-mode-insert=Search<CR>
+nmap <silent> [denite]g :<C-u>Denite grep -highlight-mode-insert=Search<CR>
+nmap <silent> <C-p> :<C-u>Denite file_rec -highlight-mode-insert=Search<CR>
 
 "Denite filetype<CR>
 "Denite file_rec<CR>
