--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -40,3 +40,4 @@ set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 
 set-option -g status-bg "colour67"
+set-option -sg escape-time 10
