--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -9,10 +9,21 @@ on_ft = ['pug']
 # language plugins (go)
 [[plugins]]
 repo = 'fatih/vim-go'
-on_ft = ['go']
+on_ft = 'go'
+hook_source = '''
+  let g:go_fmt_command = 'goimports'
+  let s:goargs = expand('%:p:h:s#\v^.+/src/##')
+  let g:neomake_go_errcheck_maker = {
+    \ 'args': ['-abspath', s:goargs],
+    \ 'append_file': 0,
+    \ 'errorformat': '%f:%l:%c:\ %m, %f:%l:%c\ %#%m',
+    \ }
+  let g:neomake_go_enabled_makers = ['golint', 'govet', 'errcheck']
+'''
 [[plugins]]
-repo = 'godoctor/godoctor.vim'
-on_ft = ['go']
+repo  = 'zchee/deoplete-go'
+if    = 'has("python3")'
+on_ft = 'go'
 
 # language plugins (haskell)
 [[plugins]]
