--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,6 +19,7 @@
     ~/.zlogout: files/.zlogout
     ~/.zshenv: files/.zshenv
     ~/.zshrc: files/.zshrc
+    ~/.zsh: files/.zsh
     ~/.config/nvim: files/.vim
     ~/.config/nvim/init.vim: files/.vimrc
     ~/.globalrc: files/.globalrc
