--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -39,5 +39,6 @@ set-option -g default-command ""
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 
-set-option -g status-bg "colour67"
+set-option -g status-fg "colour242"
+set-option -g status-bg "colour252"
 set-option -sg escape-time 10
