Modify vim theme

--- a/files/.vim/bundle/rc/dein.toml
+++ b/files/.vim/bundle/rc/dein.toml
@@ -80,6 +80,8 @@ hook_add = '''
 # ---------------------------------------
 
 [[plugins]]
+repo = 'zcodes/vim-colors-basic'
+[[plugins]]
 repo = 'NLKNguyen/papercolor-theme'
 [[plugins]]
 repo = 'rakr/vim-one'
