--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "files/.zsh/anyframe"]
 	path = files/.zsh/anyframe
 	url = https://github.com/mollifier/anyframe.git
+[submodule "files/.oh-my-zsh"]
+	path = files/.oh-my-zsh
+	url = https://github.com/robbyrussell/oh-my-zsh.git
