--- a/files/.vim/bundle/rc/dein.toml
+++ b/files/.vim/bundle/rc/dein.toml
@@ -53,6 +53,8 @@ hook_source = '''
 
 [[plugins]]
 repo = 'kovisoft/slimv'
+[[plugins]]
+repo = 'posva/vim-vue'
 
 # ---------------------------------------
 # gtags
