--- a/files/.globalrc
+++ b/files/.globalrc
@@ -35,7 +35,7 @@
 # Please refer to gtags.conf(5) for details.
 #
 default:\
-	:tc=native:tc=pygments:
+    :tc=native:tc=pygments:
 native:\
 	:tc=gtags:tc=htags:
 user:\
@@ -62,7 +62,7 @@ native-pygments:\
 # See gtags(1).
 #---------------------------------------------------------------------
 common:\
-	:skip=webroot/,tmp/,HTML/,HTML.pub/,tags,TAGS,ID,y.tab.c,y.tab.h,gtags.files,cscope.files,cscope.out,cscope.po.out,cscope.in.out,SCCS/,RCS/,CVS/,CVSROOT/,{arch}/,autom4te.cache/,*.orig,*.rej,*.bak,*~,#*#,*.swp,*.tmp,*_flymake.*,*_flymake,*.o,*.a,*.so,*.lo,*.zip,*.gz,*.bz2,*.xz,*.lzh,*.Z,*.tgz,*.min.js,*min.css:
+	:skip=HTML/,HTML.pub/,tags,TAGS,ID,y.tab.c,y.tab.h,gtags.files,cscope.files,cscope.out,cscope.po.out,cscope.in.out,SCCS/,RCS/,CVS/,CVSROOT/,{arch}/,autom4te.cache/,*.orig,*.rej,*.bak,*~,#*#,*.swp,*.tmp,*_flymake.*,*_flymake,*.o,*.a,*.so,*.lo,*.zip,*.gz,*.bz2,*.xz,*.lzh,*.Z,*.tgz,*.min.js,*min.css:
 #
 # Built-in parsers.
 #
@@ -87,7 +87,7 @@ user-custom|User custom plugin parser:\
 #
 exuberant-ctags|plugin-example|setting to use Exuberant Ctags plug-in parser:\
 	:tc=common:\
-	:ctagscom=/usr/bin/ctags:\
+	:ctagscom=/usr/local/opt/ctags/bin/ctags:\
 	:ctagslib=$libdir/gtags/exuberant-ctags.la:\
 	:langmap=Ant\:(*.build.xml):\
 	:langmap=Asm\:.asm.ASM.s.S.A51(*.29[kK])(*.[68][68][kKsSxX])(*.[xX][68][68]):\
@@ -369,7 +369,7 @@ universal-ctags|setting to use Universal Ctags plug-in parser:\
 #
 pygments-parser|Pygments plug-in parser:\
 	:tc=common:\
-	:ctagscom=/usr/bin/ctags:\
+	:ctagscom=/usr/local/opt/ctags/bin/ctags:\
 	:pygmentslib=$libdir/gtags/pygments-parser.la:\
 	:langmap=ABAP\:.abap:\
 	:langmap=ANTLR\:.G.g:\
