--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -6,6 +6,10 @@ on_ft = ['html', 'htmldjango', 'css', 'php', 'eruby']
 repo = 'digitaltoad/vim-pug'
 on_ft = ['pug']
 
+# language plugins (php)
+[[plugins]]
+repo = 'StanAngeloff/php.vim'
+
 # language plugins (go)
 [[plugins]]
 repo = 'fatih/vim-go'
