--- a/files/.vim/bundle/rc/dein.toml
+++ b/files/.vim/bundle/rc/dein.toml
@@ -37,22 +37,24 @@ repo = 'Shougo/deoplete.nvim'
 if = "has('nvim')"
 on_i = 1
 on_event = 'InsertCharPre'
-hook_source = '''
-  let g:deoplete#enable_at_startup = 1
-  let g:deoplete#auto_complete_start_length = 1
-  let g:deoplete#enable_camel_case = 0
-  let g:deoplete#enable_ignore_case = 0
-  let g:deoplete#enable_refresh_always = 1
-  let g:deoplete#enable_smart_case = 1
-  let g:deoplete#file#enable_buffer_path = 1
-  let g:deoplete#max_list = 10000
-  inoremap <expr><tab> pumvisible() ? "\<C-n>" :
-        \ neosnippet#expandable_or_jumpable() ?
-        \    "\<Plug>(neosnippet_expand_or_jump)" : "\<tab>"
-'''
+#hook_source = '''
+#  let g:deoplete#enable_at_startup = 1
+#  let g:deoplete#auto_complete_start_length = 1
+#  let g:deoplete#enable_camel_case = 0
+#  let g:deoplete#enable_ignore_case = 0
+#  let g:deoplete#enable_refresh_always = 1
+#  let g:deoplete#enable_smart_case = 1
+#  let g:deoplete#file#enable_buffer_path = 1
+#  let g:deoplete#max_list = 10000
+#  inoremap <expr><tab> pumvisible() ? "\<C-n>" :
+#        \ neosnippet#expandable_or_jumpable() ?
+#        \    "\<Plug>(neosnippet_expand_or_jump)" : "\<tab>"
+#'''
 
 [[plugins]]
 repo = 'kovisoft/slimv'
+[[plugins]]
+repo = 'Shougo/context_filetype.vim'
 
 # ---------------------------------------
 # gtags
