Add ANTLR support

--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -128,3 +128,7 @@ on_ft = ['lisp']
 [[plugins]]
 repo = 'vim-scripts/groovy.vim'
 on_ft = ['groovy']
+
+[[plugins]]
+repo = 'dylon/vim-antlr'
+on_ft = ['antlr']
