--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -128,7 +128,9 @@ on_ft = ['lisp']
 [[plugins]]
 repo = 'vim-scripts/groovy.vim'
 on_ft = ['groovy']
-
 [[plugins]]
 repo = 'dylon/vim-antlr'
 on_ft = ['antlr']
+[[plugins]]
+repo = 'ElmCast/elm-vim'
+on_ft = ['elm']
