--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -51,10 +51,10 @@ hook_add = '''
     let g:nvim_typescript#vue_support = 1
 '''
 
-
 # Language Support: PHP
 [[plugins]]
 repo = 'StanAngeloff/php.vim'
+on_ft = ['php']
 
 # Language Support: Go
 [[plugins]]
@@ -69,6 +69,9 @@ hook_source = '''
     \ 'errorformat': '%f:%l:%c:\ %m, %f:%l:%c\ %#%m',
     \ }
   let g:neomake_go_enabled_makers = ['go', 'golint', 'govet', 'errcheck']
+  " LSPに任せる機能をOFFにする
+  let g:go_def_mapping_enabled = 0
+  let g:go_doc_keywordprg_enabled = 0
 '''
 [[plugins]]
 repo = 'fatih/molokai'
