--- a/files/.vim/bundle/rc/dein.toml
+++ b/files/.vim/bundle/rc/dein.toml
@@ -125,6 +125,8 @@ repo =  'prabirshrestha/asyncomplete-neosnippet.vim'
 #    call system('composer install && composer run-script parse-stubs')
 #endif
 #'''
+[[plugins]]
+repo =  'chemzqm/denite-git'
 
 # ---------------------------------------
 # code jump (gtags)
