Add reasonml support

--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -135,3 +135,6 @@ on_ft = ['antlr']
 [[plugins]]
 repo = 'ElmCast/elm-vim'
 on_ft = ['elm']
+[[plugins]]
+repo = 'reasonml-editor/vim-reason-plus'
+on_ft = ['reasonml']
