Add reasonml support

--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -137,4 +137,4 @@ repo = 'ElmCast/elm-vim'
 on_ft = ['elm']
 [[plugins]]
 repo = 'reasonml-editor/vim-reason-plus'
-on_ft = ['reasonml']
+on_ft = ['reason']
