--- a/files/.vim/bundle/rc/dein_lazy.toml
+++ b/files/.vim/bundle/rc/dein_lazy.toml
@@ -135,5 +135,5 @@ on_ft = ['antlr']
 repo = 'ElmCast/elm-vim'
 on_ft = ['elm']
 [[plugins]]
-repo = 'jordwalke/vim-reasonml'
+repo = 'reasonml-editor/vim-reason-plus'
 on_ft = ['reason']
